# flask-pwa

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: flask-pwa.yml
flask_pwa/: __init__.py
flask_pwa/static/: manifest.json
flask_pwa/static/js/: sw.js
flask_pwa/templates/pwa/: base.html  offline.html
sample_app/: app.py
sample_app/static/js/: sw.js
sample_app/templates/: index.html  offline.html
tests/: __init__.py  test_flask_pwa.py
